--- a/index.html
+++ b/index.html
@@ -82,11 +82,8 @@
       	}
       	setPatch(i * 10, 1, chroma('black'), 10, px);
       }
-      setPatch(10, 10 , color_a);
-      setPatch(10, 110, color_b);
-      setPatch(10, 210, color_c);
-      setPatch(10, 310, chroma('black'));
-      setPatch(10, 410, chroma('white'));
+      
+      setup_palette();
     </script>
   </body>
 </html>
