--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       }
       function get_color(x, y, context) {
       	var ctx = context || cx;
-        var p = colorat(x, y, ctx);
+        var p = colorAt(x, y, ctx);
 
         var color = chroma(p, 'rgb');
         return color;
