out the pan and into the firebase

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <canvas id="theColors" width="1200" height="600"></canvas>
 	<div class="footer"><small>V_0.0.0.1 (got to start somewhere)</small></div>
     <script>
-    var myDataRef = new Firebase('https://pefhzmvzxg7.firebaseio-demo.com/');
+    var myDataRef = new Firebase('https://blistering-inferno-9287.firebaseio.com/');
     var canvas = document.getElementById('thePatches');
     var cx = canvas.getContext('2d');
     var palette = document.getElementById('theColors');
